Fix warnings Add version to Serialized implementations Don't use deprecated methods